# speedoza

./: .gitignore  AGENT.md  Agents.md  CONTRIBUTING.md  Cargo.toml  DAILY.md  LICENSE  README.md  SECURITY.md  doc.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: README.md
benches/data/: bench_corpus_91k.txt  long_prompt_4k.txt  long_prompt_8k.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: budget.rs  config.rs  dtype.rs  error.rs  layout.rs  lib.rs  tensor.rs
crates/drafter/: Cargo.toml
crates/drafter/src/: dflash.rs  eagle3.rs  eagle3_forward.rs  eagle3_gpu.rs  forward.rs  gpu.rs  handoff.rs  lib.rs  propose.rs
crates/kernels/: Cargo.toml  build.rs
crates/kernels/src/: attention.rs  backend.rs  deltanet.rs  drafter_attention.rs  graph.rs  interpreter.rs  lib.rs  memory.rs  nvfp4_gemm.rs  ops.rs  rmsnorm.rs  rope.rs  sampling.rs  swiglu.rs  turboquant.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/mtp/: Cargo.toml
crates/mtp/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cuda_graph.rs  engine.rs  gpu.rs  interpreter_compile.rs  kv_cache.rs  lib.rs  state.rs  weights.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
docs/: code-inventory.md  development.md  installation.md  kernel-validation.md  mirage-megakernel.md  model-setup.md  mtp-recovery-plan.md  perf-roadmap.md  repo-layout.md  research.md  roadmap.md  survey-vllm-llamacpp-2026-06-12.md  troubleshooting.md
docs/superpowers/notes/: 2026-05-04-decode-parity-gemv-passthrough.md  2026-05-04-direction-b-b3-1-parity.md  2026-05-04-direction-b-cutlass-blockers.md  2026-06-08-dflash-kernel-reuse-audit.md  2026-06-09-decode-longctx-investigation.md  2026-06-09-dflash-bench-sweep.md  2026-06-09-dflash-benchmarks.md  2026-06-09-dflash-final.md  2026-06-09-dflash-long-context.csv  2026-06-09-dflash-long-context.md  2026-06-09-dflash-sweep.csv  2026-06-09-long-context-decode-roadmap.md  2026-06-09-strategic-assessment-post-splitk.md
docs/superpowers/plans/: 2026-05-02-tree-mtp-phase1-plan.md  2026-05-04-direction-b-nvfp4-gemv-b3.md
docs/superpowers/plans/archive/: 2026-05-04-direction-b-nvfp4-gemv.md  README.md
docs/superpowers/specs/: 2026-05-02-tree-mtp-phase1-design.md  2026-05-04-direction-b-nvfp4-gemv-design.md  2026-06-08-dflash-speculative-decoding-design.md  2026-06-08-interpreter-megakernel-design.md  2026-06-09-dflash-fa-drafter-attention.md  2026-06-09-dflash-mk-phase4-verify-megakernel.md
kernels-cuda/: active_stream.h  attention.cu  attention_decode_tiled.cu  attention_flash_prefill.cu  attention_flash_splitk.cu  attention_sage_prefill.cu  deltanet.cu  deltanet_prefill.cu  drafter_attention.cu  drafter_attention_flash.cu  fp8_matvec.cu  lm_head_fp8.cu  nvfp4_gemm.cu  ops.cu  runtime.cu  smoke.cu  turboquant.cu
kernels-cuda/decode_gemv/: l2_prefetch.cu  nvfp4_gemv_mma_helpers.cuh  nvfp4_gemv_mma_kernel.cuh  nvfp4_gemv_sm120.cu  nvfp4_gemv_stub.cu
kernels-cuda/include/: qwen36_fp4.h
kernels-cuda/interpreter/: counters.cuh  instruction.h  interpreter_sm120.cu  page_allocator.cuh  prefetch.cuh
kernels-cuda/interpreter/opcodes/: attn_decode_full.cuh  conv1d_gdn_gate_fused.cuh  deltanet_recur.cuh  fallback_trampoline.cuh  lm_head_tiled.cuh  nvfp4_gemv.cuh  nvfp4_quantize.cuh  q_proj_full_attn.cuh  residual_add.cuh  rmsnorm_bf16.cuh  rmsnorm_nvfp4_quant.cuh  rope_partial.cuh  swiglu_bf16.cuh  swiglu_nvfp4_quant.cuh
kernels-cuda/megakernel/: full_attn_block_sm120.cu  nvfp4_matvec_sm120.cu  nvfp4_matvec_stub.cu
kernels-cuda/tools/: gemv_shape_bench.cu
scripts/: bench_attention_ab.sh  bench_dashboard.sh  bench_matrix.sh  bench_tq35_contexts.sh  build_cuda.sh  decode_parity.py  dflash_bench_sweep.py  dflash_parity.py  drafter_al_eval.sh  lmhead_fp4_probe.py  lmhead_fp8_probe.py  nsight_audit.sh  nsys_gap_analysis.py  profile_bench.sh  quality_tq35.sh  smoke_cuda.sh  triton_aot.py  verify_perf_gate.sh  vllm_acceptance_oracle.py
