[workspace]
members = [
    "crates/core",
    "crates/loader",
    "crates/tokenizer",
    "crates/kernels",
    "crates/runtime",
    "crates/mtp",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://huggingface.co/sakamakismile/Qwen3.6-27B-Text-NVFP4-MTP"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
memmap2 = "0.9"
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = "0.22"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

