[package]
name = "qwen36-fp4"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "qwen36"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
qwen36-fp4-core = { path = "../core" }
qwen36-fp4-loader = { path = "../loader" }
qwen36-fp4-runtime = { path = "../runtime" }
qwen36-fp4-tokenizer = { path = "../tokenizer" }
serde_json.workspace = true

