[package]
name = "qwen36-fp4-drafter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qwen36_fp4_drafter"
path = "src/lib.rs"

[features]
default = []
cuda = ["qwen36-fp4-kernels/cuda"]

[dependencies]
qwen36-fp4-core = { path = "../core" }
qwen36-fp4-kernels = { path = "../kernels" }
qwen36-fp4-loader = { path = "../loader" }
anyhow.workspace = true
memmap2.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
