[package]
name = "qwen36-fp4-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qwen36_fp4_runtime"
path = "src/lib.rs"

[features]
default = []
cuda = ["qwen36-fp4-kernels/cuda", "qwen36-fp4-loader"]

[dependencies]
qwen36-fp4-core = { path = "../core" }
qwen36-fp4-kernels = { path = "../kernels" }
qwen36-fp4-loader = { path = "../loader", optional = true }
qwen36-fp4-mtp = { path = "../mtp" }
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
