[package]
name = "qwen36-fp4-tokenizer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qwen36_fp4_tokenizer"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true

